Fixed vertical spacing between index thumbnails

--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -63,3 +63,7 @@ form {
     display: flex;
     flex-wrap: wrap;
 }
+
+.paddingBottom {
+    padding-bottom: 15px;
+}
